discussion/kv_engine/173472/173472_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Continue/Cancel RangeScan on an I/O task

Add RangeScanContinueTask (READER) which is a task to be scheduled
in response to scan continue or cancel requests.

For continue, the "scanning" occurs on the I/O task.
For cancel, the destruct (close of snapshot) occurs on the I/O task.

In this commit the task "model" is intentionally simple, 1 new task
created per continue or cancel. The focus of the commit is the
scan continue/cancel logic and a future commit will look to improve
the task model by limiting the tasks and/or limiting the concurrency.

Change-Id: I96daac2c6b81da145f21754e17c519de13cafc03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-22 14:21:10.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-22 16:07:25.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38256/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:200:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38256/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16903/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:200:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<RunState> runState;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16903/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:200:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16903/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18687/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-22T14:27:43.383Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:27:43.383Z] Expected equality of these values:
[2022-04-22T14:27:43.383Z]   100
[2022-04-22T14:27:43.383Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:27:43.383Z]     Which is: 94
[2022-04-22T14:27:43.383Z] vb:0 not fully resident after eviction
[2022-04-22T14:27:43.383Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:27:43.383Z] Expected equality of these values:
[2022-04-22T14:27:43.383Z]   100
[2022-04-22T14:27:43.383Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:27:43.383Z]     Which is: 96
[2022-04-22T14:27:43.383Z] vb:1 not fully resident after eviction
[2022-04-22T14:27:43.383Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (436 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18687/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19029/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-22T14:29:06.183Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:29:06.183Z] Expected equality of these values:
[2022-04-22T14:29:06.183Z]   100
[2022-04-22T14:29:06.183Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:29:06.183Z]     Which is: 97
[2022-04-22T14:29:06.183Z] vb:0 not fully resident after eviction
[2022-04-22T14:29:06.183Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:29:06.183Z] Expected equality of these values:
[2022-04-22T14:29:06.183Z]   100
[2022-04-22T14:29:06.183Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:29:06.183Z]     Which is: 98
[2022-04-22T14:29:06.183Z] vb:1 not fully resident after eviction
[2022-04-22T14:29:06.183Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (292 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19029/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27099/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27099/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17788/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17788/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6649/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45533/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15871/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19727/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6562/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
